--- a/Laracaster/Base.lproj/Main.storyboard
+++ b/Laracaster/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--Views-->
@@ -22,14 +22,12 @@
                                 <subviews>
                                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="weJ-OX-pa4" userLabel="Separator">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="1"/>
-                                        <animations/>
                                         <color key="backgroundColor" red="1" green="0.90382708150000002" blue="0.56354662980000003" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="0.5" id="f3Q-XU-nI1"/>
                                         </constraints>
                                     </view>
                                 </subviews>
-                                <animations/>
                                 <color key="backgroundColor" red="0.64292315099999997" green="0.91508838380000002" blue="0.71312409129999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="right" secondItem="weJ-OX-pa4" secondAttribute="right" id="NmO-x2-HYx"/>
@@ -39,7 +37,6 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="5SV-9y-OyE" firstAttribute="left" secondItem="2Kz-m1-XuI" secondAttribute="left" id="05m-Zw-Vmt"/>
@@ -71,7 +68,6 @@
                     <view key="view" contentMode="scaleToFill" id="ycw-rF-hke">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -90,7 +86,6 @@
                     <view key="view" contentMode="scaleToFill" id="hNt-io-x8A">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Watch" id="3ru-Rr-N9R"/>
@@ -110,7 +105,6 @@
                     <view key="view" contentMode="scaleToFill" id="mjK-yT-NCL">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -129,7 +123,6 @@
                     <view key="view" contentMode="scaleToFill" id="rfa-LO-Xjz">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
@@ -148,7 +141,6 @@
                     <view key="view" contentMode="scaleToFill" id="Gz2-gO-yik">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="72c-pm-CTw">
@@ -159,7 +151,6 @@
                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="Da3-SZ-bil">
                             <rect key="frame" x="180" y="7" width="240" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
                             <segments>
                                 <segment title="Downloading"/>
                                 <segment title="Downloaded"/>
@@ -172,11 +163,47 @@
                     </navigationItem>
                     <connections>
                         <outlet property="downloadStatusControl" destination="Da3-SZ-bil" id="g7c-zH-8aj"/>
+                        <outlet property="searchDisplayController" destination="oF3-lw-aod" id="9NA-Hl-TKJ"/>
+                        <segue destination="1Th-7V-SeL" kind="show" action="showDetailViewController:sender:" id="hm4-DO-v78"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dtX-in-Dzh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="a1s-PV-ova">
+                    <connections>
+                        <outlet property="delegate" destination="jcA-EB-m2o" id="sxe-EY-NL3"/>
+                        <outlet property="searchContentsController" destination="jcA-EB-m2o" id="b0z-O3-v1T"/>
+                        <outlet property="searchResultsDataSource" destination="jcA-EB-m2o" id="mCe-4Y-rUO"/>
+                        <outlet property="searchResultsDelegate" destination="jcA-EB-m2o" id="N5T-9Y-YQs"/>
+                    </connections>
+                </searchDisplayController>
+                <searchDisplayController id="oF3-lw-aod">
+                    <connections>
+                        <outlet property="delegate" destination="jcA-EB-m2o" id="VuO-uy-gkr"/>
+                        <outlet property="searchContentsController" destination="jcA-EB-m2o" id="2Jm-bA-I7d"/>
+                        <outlet property="searchResultsDataSource" destination="jcA-EB-m2o" id="DDa-PW-qfb"/>
+                        <outlet property="searchResultsDelegate" destination="jcA-EB-m2o" id="qZU-Fm-aiw"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="7409" y="720"/>
+            <point key="canvasLocation" x="7419" y="704"/>
+        </scene>
+        <!--Downloads Folder View Controller-->
+        <scene sceneID="UtK-KO-3Tz">
+            <objects>
+                <viewController storyboardIdentifier="DownloadsFolderViewController" id="1Th-7V-SeL" customClass="DownloadsFolderViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wxN-EK-wUl"/>
+                        <viewControllerLayoutGuide type="bottom" id="mVi-mH-LVd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dsQ-lg-l0O">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Mxv-Cx-kWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8162" y="704"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mib-oC-osJ">
@@ -186,7 +213,6 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="TH3-Zg-PJd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <animations/>
                         <color key="backgroundColor" red="0.50196078431372548" green="0.79607843137254897" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="barTintColor" red="0.50196078430000002" green="0.79607843140000001" blue="0.76862745099999996" alpha="1" colorSpace="calibratedRGB"/>
                         <textAttributes key="titleTextAttributes">
