--- a/Laracaster/Inc/DownloadedFileSystemTableViewCell.xib
+++ b/Laracaster/Inc/DownloadedFileSystemTableViewCell.xib
@@ -1,21 +1,66 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15A278b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="DownloadedFileSystemTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="65"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="75"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
                 <autoresizingMask key="autoresizingMask"/>
-                <animations/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rU7-7G-rSo">
+                        <rect key="frame" x="75" y="8" width="183" height="52"/>
+                        <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XU7-fI-GbW">
+                        <rect key="frame" x="275" y="17" width="34" height="34"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="34" id="NWK-eF-geh"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bqq-2u-cz8">
+                        <rect key="frame" x="0.0" y="68" width="320" height="6"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yga-Zf-DAL">
+                        <rect key="frame" x="8" y="8" width="52" height="52"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="52" id="OCf-MR-xW6"/>
+                        </constraints>
+                    </imageView>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="rU7-7G-rSo" firstAttribute="top" secondItem="Yga-Zf-DAL" secondAttribute="top" id="3Ar-uk-jpn"/>
+                    <constraint firstItem="XU7-fI-GbW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="9" id="NcY-pt-awe"/>
+                    <constraint firstItem="Bqq-2u-cz8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="SSv-pv-eoN"/>
+                    <constraint firstItem="rU7-7G-rSo" firstAttribute="leading" secondItem="Yga-Zf-DAL" secondAttribute="trailing" constant="15" id="Ymj-ce-Onn"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Bqq-2u-cz8" secondAttribute="bottom" constant="-7.5" id="aJT-GO-RV0"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="Yga-Zf-DAL" secondAttribute="bottom" constant="6.5" id="adQ-am-7FT"/>
+                    <constraint firstItem="Yga-Zf-DAL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="bx2-zR-BdF"/>
+                    <constraint firstItem="Yga-Zf-DAL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="j7S-cF-JjU"/>
+                    <constraint firstItem="Yga-Zf-DAL" firstAttribute="bottom" secondItem="rU7-7G-rSo" secondAttribute="bottom" id="jMe-Jr-GnX"/>
+                    <constraint firstItem="Bqq-2u-cz8" firstAttribute="top" secondItem="Yga-Zf-DAL" secondAttribute="bottom" constant="8" symbolic="YES" id="lWq-tI-FDB"/>
+                    <constraint firstAttribute="trailing" secondItem="Bqq-2u-cz8" secondAttribute="trailing" id="oFL-dV-RYU"/>
+                    <constraint firstItem="XU7-fI-GbW" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" constant="-3" id="u3D-of-HDR"/>
+                    <constraint firstItem="XU7-fI-GbW" firstAttribute="leading" secondItem="rU7-7G-rSo" secondAttribute="trailing" constant="17" id="whd-r6-06z"/>
+                    <constraint firstItem="rU7-7G-rSo" firstAttribute="centerY" secondItem="XU7-fI-GbW" secondAttribute="centerY" id="zqU-FK-7CW"/>
+                </constraints>
             </tableViewCellContentView>
-            <animations/>
+            <connections>
+                <outlet property="decoratorView" destination="Bqq-2u-cz8" id="wnK-OT-cVp"/>
+                <outlet property="fileDirIndicatorImageView" destination="Yga-Zf-DAL" id="oOc-Ma-5aG"/>
+                <outlet property="infoLabel" destination="rU7-7G-rSo" id="3a6-gL-PUR"/>
+                <outlet property="proceedingIndicatorImageView" destination="XU7-fI-GbW" id="JLT-M3-vJO"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
